# xpipeline

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
docs/: Understanding sign conventions.ipynb  cli.rst  conf.py  index.rst  tasks.rst
docs/_static/: dark.css
docs/commands/: eval_klip.rst  klip.rst  local_klip.rst
docs/tasks/: characterization.rst  data_quality.rst  detector.rst  improc.rst  iofits.rst  learning.rst  sky_model.rst  starlight_subtraction.rst
xpipeline/: .dockerignore  cli.py  commands.py  constants.py  core.py  irods.py  lsqr.py  old_pipeline.py  test_core.py  test_lsqr.py  types.py  utils.py  xconf.py
xpipeline/commands/: align.py  aligned_cutouts.py  base.py  clio_calibrate.py  clio_split.py  collect_dataset.py  combine.py  combine_images.py  commands.py  compute_sky_model.py  config_grid.py  copy_test.py  diagnostic.py  eval_klip.py  evaluate.py  inject.py  inspect_grid_summary.py  klip.py  klipt_fm.py  klipt_fm_point.py  local_klip.py  magaox_calibrate.py  make_templates.py  measure_starlight_subtraction.py  measure_starlight_subtraction_grid.py  save_measured_starlight_subtraction.py  scale_templates.py  sky_subtract.py  stack.py  subtract_starlight.py  summarize_grid.py  update_headers.py  vapp_trap.py
xpipeline/instruments/: clio.py
xpipeline/pipelines/: __init__.py  new.py  test_pipelines.py
xpipeline/ref/: clio.py  magaox.py  magellan.py
xpipeline/ref/clio/: __init__.py  clio_pupil_mask.fits  (+2 more)
xpipeline/tasks/: __init__.py  characterization.py  data_quality.py  detector.py  grid.py  improc.py  iofits.py  learning.py  obs_table.py  regions.py  sky_model.py  starlight_subtraction.py  test_characterization.py  test_common.py  test_improc.py  test_learning.py  test_starlight_subtraction.py  test_vapp.py  vapp.py
